# nes-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CPU.cpp  CPU.h  Console.cpp  Console.h  Instructions.h  Memory.cpp  Memory.h  create_binary.py  defines.h  main.cpp  program.hex
.github/workflows/: cmake.yml  linux.yml
6502_samples/: Addressing  Subroutines  program.hex  shift
6502_samples/test_roms/: functional_test.lst  functional_test_no_decimal_flags.lst  functional_test_no_decimal_ops.lst
Python/: 6502_instructions.json
Sample Programs/: Flags
Tools/: fix_binary.py  main.py
apps/: 6502_emulator.cpp
apps/6502_tester/: 6502_tester.cpp  CMakeLists.txt
apps/6502_viewer/: 6502_viewer.cpp  CMakeLists.txt
apps/6502_viewer/views/: MainGUI.cpp  MainGUI.h
apps/leak_check/: CMakeLists.txt  leak_check.cpp
apps/nes_emulator/: CMakeLists.txt  emulator.cpp
apps/nes_emulator/icon/: 6502_viewer.rc
apps/nes_emulator/views/: MainGUI.cpp  MainGUI.h
data/roms/: donkey_kong_classic.nes
include/: Bus.h  CPU.h  CPU_Bus.h  Cartridge.h  Console.h  Debug.h  DirectMemory.h  Instructions.h  Mapper.h  Mapper000.h  Memory.h  NESMemory.h  RAM_Bus.h  View.h  Window.h
include/SDL/: Window_SDL.h
include/Views/: View.h
src/: CPU.cpp  CPU_Bus.cpp  Cartridge.cpp  Console.cpp  DirectMemory.cpp  Memory.cpp  NESMemory.cpp  main.cpp
src/SDL/: Window_SDL.cpp
src/include/: CPU.h  Instructions.h  Memory.h  Test.h  Window.h
src/include/SDL/: Window_SDL.h
tests/: cpu_test.cpp  memory_test.cpp
tools/: main.py  make_cpu_smoke_rom.py  process.py
